# taco

./: LICENSE  README.md  pyproject.toml  requirements.txt
taco/: __main__.py  aco.py  taco.py
taco/data/: 107ali535.csv  107att532.csv  107si535.csv  10att48.csv  10hk48.csv  113pa561.csv  115rat575.csv  115u574.csv  11berlin52.csv  11eil51.csv  12brazil58.csv  131p654.csv  132d657.csv  134gr666.csv  145u724.csv  14st70.csv  157rat783.csv  16eil76.csv  16pr76.csv  20gr96.csv  20kroA100.csv  20kroB100.csv  20kroC100.csv  20kroD100.csv  20kroE100.csv  20rat99.csv  20rd100.csv  21eil101.csv  21lin105.csv  22pr107.csv  24gr120.csv  25pr124.csv  26bier127.csv  26ch130.csv  28gr137.csv  28pr136.csv  29pr144.csv  30ch150.csv  30kroA150.csv  30kroB150.csv  (+38 more)
tests/: __init__.py  test_data.py
