[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "taco"
version = "0.0.1"
dependencies = [
  "numpy",
]
requires-python = ">= 3.9"
authors = [
  {name = "Rodrigo Duran", email = "rdurans1@jh.edu"},
]
maintainers = [
  {name = "Rodrigo Duran", email = "rdurans1@jh.edu"},
]
description = "Solves the Traveling Salesman Problem (TSP) using Ant Colony Optimization (ACO)."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
taco = "taco:main"
