[build-system]
requires = [
  "setuptools >= 75.6.0",
  "setuptools-scm >= 8.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "taco"
version = "0.1.0"
dependencies = [
  "numpy >= 2.1.3",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rodrigo Duran", email = "rdurans1@jh.edu"},
]
maintainers = [
  {name = "Rodrigo Duran", email = "rdurans1@jh.edu"},
]
description = "Solves the Traveling Salesman Problem (TSP) using Ant Colony Optimization (ACO)."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/rads2995/taco.git"
